--- a/index.css
+++ b/index.css
@@ -1,12 +1,15 @@
 body {
-  background-color: grey;
+  background-color: #ecf0f1;
+}
+
+.btn {
+  cursor: pointer;
 }
 
 h1 {
-  color: white;
+  color: #34495e;
 }
 
-/* id로 뭘 선택할 때는 #을 써서 선택해야해 */
-
-/* #title {
-} */
+.clicked {
+  color: #7f8c8d;
+}
