--- a/index.css
+++ b/index.css
@@ -6,11 +6,20 @@ body {
   cursor: pointer;
 }
 
-h1 {
+body {
   color: #34495e;
-  font-size: 50px;
+  font-size: 20px;
 }
 
 .clicked {
   color: #7f8c8d;
+}
+
+.form,
+.grettings {
+  display: none;
+}
+
+.showing {
+  display: block;
 }
