--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ecf0f1;
+  background-color: #2c3e50;
 }
 
 .btn {
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-  color: #34495e;
+  color: #95a5a6;
   font-size: 20px;
 }
 
@@ -22,4 +22,22 @@ body {
 
 .showing {
   display: block;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+  animation: fadeIn 0.5s linear;
 }
